--- a/header.html
+++ b/header.html
@@ -6,36 +6,26 @@
    <title>Key'Pers, connecting pet lovers</title>
    <meta name="description" content="Key'Pers is an online petsitting platform.">
    <meta charset="utf-8">
-   <link rel="stylesheet" type="text/css" href="style.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" type="text/css" href="header.css">
 
 </head>
 
 <body>
 
-  <div class="header-color">
-    <header>
 
-      <table>
-        <tr>
-          <td>
+    <header class="header-style">
             <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-          </td>
-          <td>
+
             <a href="#">🔍Search a pet-sitter</a>
-          </td>
-          <td>
+
             <a href="#">♡Become a pet-sitter</a>
-          </td>
-          <td>
+
             <a href="#">🐾Discover our services</a>
-          </td>
-          <td>
+
             <a href="#">Sign up / Login</a>
-          </td>
-          <td>
+
             <a href="#">Help</a>
-          </td>
-        </tr>  
-      </table>
-	 </header>
-  </div>
+
+
+   </header>
