--- a/petsitter-signup.html
+++ b/petsitter-signup.html
@@ -12,8 +12,7 @@
   </head>
 
   <body>
-  	<div style="background-image: url(background.png);">
-  	 <div class="card-green">
+  	 <div class="card-rectangle">
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li>
