--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,10 @@
+
 <footer class="footer-color">
-      <table>
-        <tr class="list-align">
-        <td><a href="#">About us</a></td>
-        <td><a href="#">Terms of use</a></td>
-<td>
+        <div>
+        <a href="#">About us</a>
+        <a href="#">Terms of use</a>
+</div>
+<div>
     <ul class="icon-align">
     <li>
      <a href="#"></a>
@@ -22,7 +23,5 @@
       <i class="fab fa-instagram"></i>
     </li>
   </ul>
-</td>
-</tr>
-</table>
+</div>
 </footer>
