--- a/index.html
+++ b/index.html
@@ -14,42 +14,22 @@
 
 <body>
 
-<header class="header-color">
-<table>
-  <tr>
-    <td>
-      <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-    </td>
-
-    <td class="nav-style">
-      <a href="#">🔍 Search a pet-sitter</a>
-    </td>
-    <td class="nav-style">
-      <a href="#">♡ Become a pet-sitter</a>
-    </td>
-    <td class="nav-style">
-      <a href="#">🐾 Discover our services</a>
-    </td>
-
-  <td class="nav-right">
-    <a href="#">Sign up / Login</a>
-  </td>
-  <td>
-    <a href="#">Help</a>
-  </td>
-</tr>
-</table>
+<header class="header-style">
+   <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+   <a href="index.html">🔍 Search a pet-sitter</a>
+   <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
+   <a href="index.html">🐾 Discover our services</a>
+   <a href="#">Sign up / Login</a>
+   <a href="index.html">Help</a>
 </header>
 
 
-<div class="card-style">
-  <h1> Find the pet-sitter made for you! </h1>
-
-  <div>
-    <table>
+<div class="container">
+    <h1> Find the pet-sitter made for you! </h1>
+  <table>
       <tr>
         <td> <select id="pet" name="choose type of pet" class="form-style">
-          <option value="A">Choose type and number of pets</option>
+          <option value="A">Choose type of pet</option>
           <option value="B">Dog</option>
           <option value="C">Cat</option>
           <option value="D">Rabbit</option>
@@ -79,44 +59,39 @@
           </form>
         </td>
         <td>
-          <a href="#" class="btn-green">Submit</a>
+          <a href="search.html" class="btn-green">Submit</a>
         </td>
       </tr>
 
 </table>
 </div>
-</div>
 
 <footer class="footer-color">
-<table>
-  <tr>
-    <td><a href="#">About us</a></td>
-    <td><a href="#">Terms of use</a></td>
-
-    <td>
-      <ul class="icon-align">
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-youtube"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fas fa-at"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-facebook"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-instagram"></i>
-      </li>
-    </ul>
-  </td>
-</tr>
-</table>
+<div>
+  <a href="#">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
 </footer>
-
 
 </body>
 
