--- a/footer.html
+++ b/footer.html
@@ -1,26 +1,25 @@
-
 <footer class="footer-color">
-        <div>
-        <a href="#">About us</a>
-        <a href="#">Terms of use</a>
+<div>
+  <a href="#">About us</a>
+  <a href="#">Terms of use</a>
 </div>
 <div>
-    <ul class="icon-align">
+  <ul class="icon-align">
     <li>
-     <a href="#"></a>
-      <i class="fab fa-youtube"></i>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
     </li>
     <li>
-      <a href="#"></a>
-      <i class="fas fa-at"></i>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
     </li>
     <li>
-      <a href="#"></a>
-      <i class="fab fa-facebook"></i>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="#"></a>
-      <i class="fab fa-instagram"></i>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
 </div>
