--- a/petsitter-signup.html
+++ b/petsitter-signup.html
@@ -7,7 +7,7 @@
    <title>Key'Pers, connecting pet lovers</title>
    <meta name="description" content="This is the sign up page for pet sitters.">
    <meta charset="utf-8">
-   <link rel="stylesheet" type="text/css" href="petsitter-signup.css">
+   <link rel="stylesheet" type="text/css" href="petsittersignup.css">
 
   </head>
 
