--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -471,7 +471,7 @@ section:after {
             <a href="#" id="discover-margin">🐾 Discover our services</a>
           </td>
            <td>
-            <a href="#"> <img src="images/profile.jpg" alt="Profile picture" id="profile-size"> </a>
+            <a href="#"> <img src="images/profilepicture.jpg" alt="Profile picture" id="profile-size"> </a>
           </td>
           <td>
             <a href="#" id="help-margin">Help</a>
@@ -503,7 +503,7 @@ section:after {
         <ul class="list-inline2">
 			<table>
 					<tr>
-						<th id="profile-style"><img src="images/profile.jpg" id="profile" alt="Profile picture"></th>
+						<th id="profile-style"><img src="images/profilepicture.jpg" id="profile" alt="Profile picture"></th>
 						<th id="name-tab"><h2>Name</h2>
 						</th>
 					
