--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -24,9 +24,7 @@ body {
 h2 {
     left: 40%;
     right: 60%;
-    font-family: Avenir;
     font-style: normal;
-    font-weight: 900;
     font-size: 40px;
     line-height: 55px;
     display: flex;
@@ -37,7 +35,6 @@ h2 {
 
 h3 {
   color: #FD6437;
-  font-family: 'Avenir';
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -57,7 +54,6 @@ h4 {
 	top: -7.07%;
 	bottom: -9.6%;
 
-	font-family: Avenir;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 24px;
@@ -66,34 +62,43 @@ h4 {
 	margin-top: 0px;
 }
 
+	
+/* Colors and fonts */
+
+body{
+  background-color: #ffffff;
+  color: #458773;
+  font-family: Avenir, sans-serif;
+  font-size: 16px;
+  margin: 0px 0px;
+  }
+
+a{
+  color: #458773;
+  text-decoration: none;
+}
+	
 /* Style the header */
 
-.header-color {
+.header-style {
   background-color: #F0C899;
   color: #458773;
   font-size: 16px;
-  padding: 10px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+  font-weight: bold;
 }
 
 .logo-size {
   width: 180px;
-  margin: -3px;
-  margin-right: 200px;
 }
 
-a{
-	color: #458773;
-	text-decoration: none;
-}
 
-#link-margin {
-	padding-right: 33px
-}
 
-#discover-margin {
-	padding-right: 190px
-}
 
 #profile-size {
 	width: 40px;
@@ -102,15 +107,6 @@ a{
 	border-style: solid;
 	border-color: white;
 	border-width: 1.5px;
-}
-
-.nav-style {
-  list-style: none;
-  padding-left: 0px;
-}
-
-.nav-style > li {
-  display: inline;
 }
 
 
@@ -140,7 +136,6 @@ h1 {
 	padding-left: 300px;
 	color: #FD5523;
 	font-size: 40px;
-	font-family: Avenir;
 	font-style: normal;
 	line-height: 0px;
 	text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
