--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -78,7 +78,6 @@ a{
 }
 	
 /* Style the header */
-
 .header-style {
   background-color: #F0C899;
   color: #458773;
@@ -447,7 +446,7 @@ section:after {
 </head>
 <body>
 
-<div class="header-color">
+<div class="header-style">
 <header>
 
       <table>
