--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -72,10 +72,13 @@ body{
   margin: 0px 0px;
   }
 
-a{
+a {
   color: #458773;
+  font-weight: bold;
   text-decoration: none;
+  transition: color 0.3 ease;
 }
+
 	
 /* Style the header */
 .header-style {
@@ -93,6 +96,7 @@ a{
 
 .logo-size {
   width: 180px;
+	padding-top: 5px;
 }
 
 
