--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -8,6 +8,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="petsitter-registration.css">
+	<link rel="stylesheet" type="text/css" href="header.css">
+	<link rel="stylesheet" type="text/css" href="footer.css">
 
 </head>
 
