--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -402,7 +402,13 @@ section:after {
   background-color: #F0C899;
   color: #458773;
   font-size: 16px;
+  height: 104px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
+	box-sizing: border-box;
+  display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-itemps: center;
   padding: 30px 30px;
   padding-bottom: 1px;
     padding-top: 40px;
