--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -456,33 +456,15 @@ section:after {
 </head>
 <body>
 
-<div class="header-style">
-<header>
+<header class="header-style">
+   <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+   <a href="index.html">🔍 Search a pet-sitter</a>
+   <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
+   <a href="index.html">🐾 Discover our services</a>
+   <a href="#"> <img src="images/profilepicture.jpg" alt="Profile picture" id="profile-size"> </a>
+   <a href="index.html">Help</a>
+</header>
 
-      <table>
-        <tr>
-          <td>
-            <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-          </td>
-          <td>
-            <a href="#" id="link-margin">🔍 Search a pet-sitter</a>
-          </td>
-          <td>
-            <a href="#" id="link-margin">♡ Become a pet-sitter</a>
-          </td>
-          <td>
-            <a href="#" id="discover-margin">🐾 Discover our services</a>
-          </td>
-           <td>
-            <a href="#"> <img src="images/profilepicture.jpg" alt="Profile picture" id="profile-size"> </a>
-          </td>
-          <td>
-            <a href="#" id="help-margin">Help</a>
-          </td>
-        </tr>  
-      </table>
-	 </header>
-</div>
 
 <section>
   <nav>
@@ -558,29 +540,30 @@ section:after {
 </section>
 
 <footer class="footer-color">
-	<ul class="list-align">
-            <li>About us</li>
-            <li>Terms of use</li>
-          </ul>
-
-          <ul class="icon-align">
-           <li>
-            <a href="#"></a>
-            <i class="fab fa-youtube"></i>
-          </li>
-           <li>
-            <a href="#"></a>
-            <i class="fas fa-at"></i>
-          </li>
-          <li>
-            <a href="#"></a>
-            <i class="fab fa-facebook"></i>
-          </li>
-          <li>
-            <a href="#"></a>
-            <i class="fab fa-instagram"></i>
-          </li>
-      </ul>
+<div>
+  <a href="#">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
 </footer>
 
 </body>
