--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -134,7 +134,7 @@ article {
 
 h1 {
 	height: 35px;
-	padding-left: 300px;
+	text-align: center;
 	color: #FD5523;
 	font-size: 40px;
 	font-style: normal;
