--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -11,13 +11,13 @@
 
 <body>
 
- <header class="header-style">
- <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-<a href="#">🔍 Search a pet-sitter</a>
-<a href="#">♡ Become a pet-sitter</a>
-<a href="#">🐾 Discover our services</a>
-<a href="#">Sign up / Login</a>
-<a href="#">Help</a>
+<header class="header-style">
+   <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+   <a href="index.html">🔍 Search a pet-sitter</a>
+   <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
+   <a href="index.html">🐾 Discover our services</a>
+   <a href="#">Sign up / Login</a>
+   <a href="index.html">Help</a>
 </header>
 
   <div class="container">
@@ -26,84 +26,72 @@
       <tr>
         <td class="texte-align"
           <form>
-           <label for="civility">Civility*:</label><br>
-           <input type="text" class="civility" name="civility"><br>
+            <input type="text" name="Civility*:" placeholder="Type here" class="input-style"
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="phone-number">Phone number*:</label><br>
-           <input type="text" class="phone-number" name="phone-number"><br>
+            <input type="text" name="Phone number*:" placeholder="+33" class="input-style"
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <label for="first-name">First Name*:</label><br>
-           <input type="text" class="first-name" name="first-name"><br>
+          <input type="text" name="First name*:" placeholder="Type here" class="input-style">
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="email-adress">Email adress*:</label><br>
-           <input type="email" class="email-adress" name="email-adress"><br>
+          <input type="text" name="Email adress*:" placeholder="@gmail.com" class="input-style">
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <label for="surname">Surname*:</label><br>
-           <input type="text" class="surname" name="surname"><br>
+           <input type="text" name="Surname:*" placeholder="Type here" class="input-style">
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="email-confirmation">Email Confirmation*:</label><br>
-           <input type="text" class="email-confirmation" name="email-confirmation"><br>
+          <input type="text" name="Email confirmatin" placeholder="@gmail.com" class="input-style">
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <label for="adress">Adress*:</label><br>
-           <input type="text" class="adress" name="adress"><br>
+           <input type="text" name="Adress*:" placeholder="Type here" class="input-style">
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="pwd">Password*:</label><br>
-           <input type="password" class="pwd" name="pwd"><br>
+           <input type="password" name="Password*:" placeholder="*****" class="input-style">
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <label for="zip-code">Zip Code*:</label><br>
-           <input type="text" class="zip-code" name="zip-code"><br>
+           <input type="text" name="Zip code*:" placeholder="Type here" class="input-style">
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="password-confirmation">Password Confirmation*:</label><br>
-           <input type="password" class="password-confirmation" name="password-confirmation"><br>
+          <input type="password" name="Password confirmation*:" placeholder="*****" class="input-style">
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <label for="birth-date">Birth Date*:</label><br>
-           <input type="date" class="birth-date" name="birth-date"><br>
+           <input type="date" name="Birth date*:" placeholder="../../...." class="input-style">
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <label for="sponsor-email">Sponsor's email:</label><br>
-           <input type="email" class="sponsor-email" name="sponsor-semail"><br>
+           <input type="text" name="Sponsor's email" placeholder="@gmail.com" class="input-style">
           </form>
         </td>
       </tr>
@@ -113,35 +101,36 @@
       Fields marked with * are mandatory
     </p>  
     <p class="text-alignment">
-      <a href="#" class="btn-green"> Register <a/>
+      <a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
     </p>    
   </div>
 
-  <footer class="footer-color">
-    <ul class="list-align">
-      <li>About us</li>
-      <li>Terms of use</li>
-    </ul>
-
-    <ul class="icon-align">
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-youtube"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fas fa-at"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-facebook"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fab fa-instagram"></i>
-      </li>
-    </ul>
-  </footer>
+<footer class="footer-color">
+<div>
+  <a href="#">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
+</footer>
   
 </body>
 
