--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -416,7 +416,6 @@ section:after {
   padding-left: 0px;
   display: inline;
   padding: 0px 20px;
-  font-weight: 800;
 }
 
 .list-align > li {
@@ -536,31 +535,31 @@ section:after {
 </section>
 
 <footer class="footer-color">
-<div>
-  <a href="#">About us</a>
-  <a href="#">Terms of use</a>
-</div>
-<div>
-  <ul class="icon-align">
-    <li>
-     <a href="#">
-      <i class="fab fa-youtube"></i></a>
-    </li>
-    <li>
-      <a href="#">
-       <i class="fas fa-at"></i></a>
-    </li>
-    <li>
-      <a href="#">
-       <i class="fab fa-facebook"></i></a>
-    </li>
-    <li>
-      <a href="#">
-       <i class="fab fa-instagram"></i></a>
-    </li>
-  </ul>
-</div>
+	<ul class="list-align">
+            <li>About us</li>
+            <li>Terms of use</li>
+          </ul>
+
+          <ul class="icon-align">
+           <li>
+            <a href="#"></a>
+            <i class="fab fa-youtube"></i>
+          </li>
+           <li>
+            <a href="#"></a>
+            <i class="fas fa-at"></i>
+          </li>
+          <li>
+            <a href="#"></a>
+            <i class="fab fa-facebook"></i>
+          </li>
+          <li>
+            <a href="#"></a>
+            <i class="fab fa-instagram"></i>
+          </li>
+      </ul>
 </footer>
+
 
 </body>
 </html>
