--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -26,72 +26,84 @@
       <tr>
         <td class="texte-align"
           <form>
-            <input type="text" name="Civility*:" placeholder="Type here" class="input-style"
+           <label for="civility">Civility*:</label><br>
+           <input type="text" class="civility" name="civility"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-            <input type="text" name="Phone number*:" placeholder="+33" class="input-style"
+           <label for="phone-number">Phone number*:</label><br>
+           <input type="text" class="phone-number" name="phone-number"><br>
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-          <input type="text" name="First name*:" placeholder="Type here" class="input-style">
+           <label for="first-name">First Name*:</label><br>
+           <input type="text" class="first-name" name="first-name"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-          <input type="text" name="Email adress*:" placeholder="@gmail.com" class="input-style">
+           <label for="email-adress">Email adress*:</label><br>
+           <input type="email" class="email-adress" name="email-adress"><br>
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <input type="text" name="Surname:*" placeholder="Type here" class="input-style">
+           <label for="surname">Surname*:</label><br>
+           <input type="text" class="surname" name="surname"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-          <input type="text" name="Email confirmatin" placeholder="@gmail.com" class="input-style">
+           <label for="email-confirmation">Email Confirmation*:</label><br>
+           <input type="text" class="email-confirmation" name="email-confirmation"><br>
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <input type="text" name="Adress*:" placeholder="Type here" class="input-style">
+           <label for="adress">Adress*:</label><br>
+           <input type="text" class="adress" name="adress"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <input type="password" name="Password*:" placeholder="*****" class="input-style">
+           <label for="pwd">Password*:</label><br>
+           <input type="password" class="pwd" name="pwd"><br>
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <input type="text" name="Zip code*:" placeholder="Type here" class="input-style">
+           <label for="zip-code">Zip Code*:</label><br>
+           <input type="text" class="zip-code" name="zip-code"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-          <input type="password" name="Password confirmation*:" placeholder="*****" class="input-style">
+           <label for="password-confirmation">Password Confirmation*:</label><br>
+           <input type="password" class="password-confirmation" name="password-confirmation"><br>
           </form>
         </td>
       </tr>
       <tr>
         <td class="texte-align"
           <form>
-           <input type="date" name="Birth date*:" placeholder="../../...." class="input-style">
+           <label for="birth-date">Birth Date*:</label><br>
+           <input type="date" class="birth-date" name="birth-date"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
-           <input type="text" name="Sponsor's email" placeholder="@gmail.com" class="input-style">
+           <label for="sponsor-email">Sponsor's email:</label><br>
+           <input type="email" class="sponsor-email" name="sponsor-semail"><br>
           </form>
         </td>
       </tr>
@@ -101,7 +113,7 @@
       Fields marked with * are mandatory
     </p>  
     <p class="text-alignment">
-      <a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
+      <a href="#" class="btn-green"> Register <a/>
     </p>    
   </div>
 
