--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -113,7 +113,7 @@
       Fields marked with * are mandatory
     </p>  
     <p class="text-alignment">
-      <a href="#" class="btn-green"> Register <a/>
+      <a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
     </p>    
   </div>
 
