--- a/search.html
+++ b/search.html
@@ -85,7 +85,7 @@
 
     <td>
     <div class="btn-margin">
-      <a href="#">+filters</a>
+      <a href="filtering.html">+filters</a>
     </div>
     </td>
   </table>
