--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -459,7 +459,7 @@ section:after {
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-   <a href="#"> <img src="images/profilepicture.jpg" alt="Profile picture" id="profile-size"> </a>
+   <a href="petsitter-dashboard.html"> <img src="images/profilepicture.jpg" alt="Profile picture" id="profile-size"> </a>
    <a href="index.html">Help</a>
 </header>
 
@@ -467,7 +467,7 @@ section:after {
 <section>
   <nav>
     <ul class="list-left">
-          <li><a href="#" class="btn-profile">Profile</a></li>
+          <li><a href="petsitter-dashboard.html" class="btn-profile">Profile</a></li>
           <li><a href="#" class="btn-left1">Requests</a></li>
           <li><a href="#" class="btn-left2">Messages</a></li>
           <li><a href="#" class="btn-left3">Calendars</a></li>
@@ -539,26 +539,26 @@ section:after {
 
 <footer class="footer-color">
 	<ul class="list-align">
-            <li>About us</li>
-            <li>Terms of use</li>
+		<a href="#"><li>About us</li></a>
+		<a href="#"><li>Terms of use</li></a>
           </ul>
 
           <ul class="icon-align">
            <li>
-            <a href="#"></a>
-            <i class="fab fa-youtube"></i>
+            <a href="#">
+            <i class="fab fa-youtube"></i></a>
           </li>
            <li>
-            <a href="#"></a>
-            <i class="fas fa-at"></i>
+            <a href="#">
+            <i class="fas fa-at"></i></a>
           </li>
           <li>
-            <a href="#"></a>
-            <i class="fab fa-facebook"></i>
+            <a href="#">
+            <i class="fab fa-facebook"></i></a>
           </li>
           <li>
-            <a href="#"></a>
-            <i class="fab fa-instagram"></i>
+            <a href="#">
+            <i class="fab fa-instagram"></i></a>
           </li>
       </ul>
 </footer>
