--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -14,32 +14,14 @@
 <body>
 
     <!-- HEADER -->
-    <header>
-        <div class="header-color">
-            <table>
-                <tr>
-                    <td>
-                        <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-                    </td>
-                    <td>
-                        <a href="#">🔍 Search a pet-sitter</a>
-                    </td>
-                    <td>
-                        <a href="#">♡ Become a pet-sitter</a>
-                    </td>
-                    <td>
-                        <a href="#">🐾 Discover our services</a>
-                    </td>
-                    <td>
-                        <a href="#">Sign up / Login</a>
-                    </td>
-                    <td>
-                        <a href="#">Help</a>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </header>
+    <header class="header-style">
+   <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+   <a href="index.html">🔍 Search a pet-sitter</a>
+   <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
+   <a href="index.html">🐾 Discover our services</a>
+   <a href="#">Sign up / Login</a>
+   <a href="index.html">Help</a>
+</header>
 
     <!-- MAIN -->
     <main>
