Connect the btns to pages

--- a/filtering.html
+++ b/filtering.html
@@ -14,7 +14,7 @@
 <body>
 
   <p>
-    <a href="#" class="btn-grey"> Back <a/>
+    <a href="search.html" class="btn-grey"> Back <a/>
   </p>
 
   <h1 class="text-align"> Additional filters </h1>
@@ -108,7 +108,7 @@
   </table>
 
   <p class="texte-align">
-   <a href="#" class="btn-green"> Filter <a/>
+   <a href="search.html" class="btn-green"> Filter <a/>
   </p> 
 
 </div>
