--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -414,19 +414,10 @@ section:after {
   left: 0px;
 }
 
-.list-align {
-  list-style: none;
-  padding-left: 0px;
-  display: inline;
-  padding: 0px 20px;
-}
-
-.list-align > li {
-  display: inline;
-  padding: 15px;
-  padding-top: 10px
-}
-
+.footertext-size {
+	padding-right: 15px;
+	}
+	
 .icon-align {
   list-style: none;
   padding-right: 50px;
@@ -538,31 +529,31 @@ section:after {
 </section>
 
 <footer class="footer-color">
-	<ul class="list-align">
-		<a href="#"><li>About us</li></a>
-		<a href="#"><li>Terms of use</li></a>
-          </ul>
-
-          <ul class="icon-align">
-           <li>
-            <a href="#">
-            <i class="fab fa-youtube"></i></a>
-          </li>
-           <li>
-            <a href="#">
-            <i class="fas fa-at"></i></a>
-          </li>
-          <li>
-            <a href="#">
-            <i class="fab fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#">
-            <i class="fab fa-instagram"></i></a>
-          </li>
-      </ul>
+<div>
+  <a href="#" class="footertext-size">About us</a>
+  <a href="#" class="footertext-size">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
 </footer>
-
-
+	
 </body>
 </html>
