--- a/filtering.html
+++ b/filtering.html
@@ -17,7 +17,7 @@
     <a href="search.html" class="btn-grey"> Back <a/>
   </p>
 
-  <h3 class="text-align"> Additional filters </h3>
+  <h3 > Additional filters </h3>
 
   <table class="table-style">
     <tr>
