--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -400,16 +400,13 @@ section:after {
   font-size: 16px;
   height: 104px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
-	box-sizing: border-box;
+  box-sizing: border-box;
   display:flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-itemps: center;
+	align-items: center;
   padding: 30px 30px;
-  padding-bottom: 1px;
-    padding-top: 40px;
-  left: 0px;
-}
+  }
 
 .footertext-size {
 	padding-right: 15px;
