--- a/search.html
+++ b/search.html
@@ -7,6 +7,7 @@
    <title>Key'Pers, connecting pet lovers</title>
    <meta name="description" content="Key'Pers is an online petsitting platform.">
    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="search.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -14,38 +15,19 @@
 
   <body>
 
-  <header class="header-color">
-    <table>
-        <tr>
-          <td>
-            <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-          </td>
-
-          <td class="nav-style">
-            <a href="#">🔍 Search a pet-sitter</a>
-          </td>
-          <td class="nav-style">
-            <a href="#">♡ Become a pet-sitter</a>
-          </td>
-          <td class="nav-style">
-            <a href="#">🐾 Discover our services</a>
-          </td>
-
-          <td class="nav-right">
-            <a href="#">Sign up / Login</a>
-          </td>
-          <td>
-            <a href="#">Help</a>
-          </td>
-        </tr>
-      </table>
-   </header>
+<header class="header-style">
+   <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+   <a href="index.html">🔍 Search a pet-sitter</a>
+   <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
+   <a href="index.html">🐾 Discover our services</a>
+   <a href="#">Sign up / Login</a>
+   <a href="index.html">Help</a>
+</header>
 
 
-  <table>
-     <td>
-      <select id="pet" name="choose type of pet" class="form-style">
-          <option value="A">1 Dog</option>
+  <nav class="form-layout">
+      <select id="pet" name="choose type of pet" class="smallerform-style">
+          <option value="A">Dog</option>
           <option value="C">Cat</option>
           <option value="D">Rabbit</option>
           <option value="E">Bird</option>
@@ -55,226 +37,94 @@
           <option value="I">Amphibian</option>
           <option value="J">Insect</option>
         </select>
-    </td>
 
-    <td>
-      <select id="services" name="choose type of services" class="form-style">
+      <select id="services" name="choose type of services" class="smallerform-style">
         <option value="1">Boarding</option>
         <option value="2">Visit</option>
         <option value="3">Walk</option>
       </select>
-    </td>
 
-    <td>
-      <form>
-        <input type="text" name="Location" placeholder="Manchester" class="input-style">
-      </form>
-    </td>
+    <input type="text" name="Location" placeholder="Manchester" class="smallerinput-style">
+    <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
+    <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
+    <a href="filter.html" id="btn-align">+filters</a>
+  </form>
+</nav>
 
+<div class="flex-container">
 
-    <td>
-      <form id="date-margin">
-        <input type="text" name="Starting date" placeholder="From 20/09" class="input-style">
-      </form>
-    </td>
-    <td>
-      <form>
-        <input type="text" name="Ending date" placeholder="To 24/09" class="input-style">
-      </form>
-    </td>
-
-    <td>
-    <div class="btn-margin">
-      <a href="filtering.html">+filters</a>
-    </div>
-    </td>
-  </table>
-
-
-<div class="card-green" id="card1">
-  <table>
-    <tr>
-      <td>
-        <img src="images/profilepicture.jpg" class="avatar-style">
-      </td>
-      <td>
-        <h2>Name</h2>
-      </td>
-      <td>
-        <ul class="rating-style">
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li>(6)</li>
-        </ul>
-      </td>
-
-
-      <td rowspan="3" class="price-align"> Starting price
-        <br>
-        <span class="price-style">17£</span>
-        <br>/per day
-      </td>
-    </tr>
-
-
-    <tr>
-      <td colspan="3">
-        <h3>City and distance from your location</h3>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="3">
-        <p>23 years-old student ready to take care of your pet!
-        Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-      </td>
-    </tr>
-
-  </table>
+<div class="cards-layout">
+<section class="card-style">
+  <div class="avatar-margin">
+ <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
 </div>
-
-<div class="card-green">
-  <table>
-    <tr>
-      <td>
-        <img src="images/profilepicture.jpg" class="avatar-style">
-      </td>
-      <td>
-        <h2>Name</h2>
-      </td>
-      <td>
-        <ul class="rating-style">
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li>(6)</li>
-        </ul>
-      </td>
-
-
-      <td rowspan="3" class="price-align"> Starting price
-        <br>
-        <span class="price-style">17£</span>
-        <br>/per day
-      </td>
-    </tr>
-
-
-    <tr>
-      <td colspan="3">
-        <h3>City and distance from your location</h3>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="3">
-        <p>23 years-old student ready to take care of your pet!
-        Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-      </td>
-    </tr>
-
-  </table>
+<div>
+    <h2 class="items-margin">Name<span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
-
-<div class="card-green">
-  <table>
-    <tr>
-      <td>
-        <img src="images/profilepicture.jpg" class="avatar-style">
-      </td>
-      <td>
-        <h2>Name</h2>
-      </td>
-      <td>
-        <ul class="rating-style">
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li>(6)</li>
-        </ul>
-      </td>
-
-
-      <td rowspan="3" class="price-align"> Starting price
-        <br>
-        <span class="price-style">17£</span>
-        <br>/per day
-      </td>
-    </tr>
-
-
-    <tr>
-      <td colspan="3">
-        <h3>City and distance from your location</h3>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="3">
-        <p>23 years-old student ready to take care of your pet!
-        Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-      </td>
-    </tr>
-
-  </table>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
 </div>
+</section>
 
-<div class="card-green">
-  <table>
-    <tr>
-      <td>
-        <img src="images/profilepicture.jpg" class="avatar-style">
-      </td>
-      <td>
-        <h2>Name</h2>
-      </td>
-      <td>
-        <ul class="rating-style">
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li class="fas fa-paw"></li>
-          <li>(6)</li>
-        </ul>
-      </td>
+<section class="card-style">
+  <div class="avatar-margin">
+    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
 
+<section class="card-style">
+  <div class="avatar-margin">
+    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
 
-      <td rowspan="3" class="price-align"> Starting price
-        <br>
-        <span class="price-style">17£</span>
-        <br>/per day
-      </td>
-    </tr>
-
-
-    <tr>
-      <td colspan="3">
-        <h3>City and distance from your location</h3>
-      </td>
-    </tr>
-
-    <tr>
-      <td colspan="3">
-        <p>23 years-old student ready to take care of your pet!
-        Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-      </td>
-    </tr>
-
-  </table>
+<section class="card-style">
+  <div class="avatar-margin">
+  <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
 </div>
 
 
 <aside>
   <img src="images/map.jpg" id="map-size">
 </aside>
+
+</div>
 
 <div class="center">
   <div class="pagination">
@@ -289,33 +139,32 @@
   </div>
 </div>
 
- <footer class="footer-color">
-      <table>
-        <tr class="list-align">
-          <td><a href="#">About us</a></td>
-          <td><a href="#">Terms of use</a></td>
-      <td>
-    <ul class="icon-align">
-      <li>
-        <a href="#"></a>
-          <i class="fab fa-youtube"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-        <i class="fas fa-at"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-          <i class="fab fa-facebook"></i>
-      </li>
-      <li>
-        <a href="#"></a>
-          <i class="fab fa-instagram"></i>
-      </li>
-    </ul>
-    </td>
-  </tr>
-  </table>
+
+<footer class="footer-color">
+<div>
+  <a href="#">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
 </footer>
 
 </body>
