--- a/header.html
+++ b/header.html
@@ -14,10 +14,10 @@
 <body>
 
 <header class="header-style">
- <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+ <a href="homepage.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
 <a href="#">🔍 Search a pet-sitter</a>
-<a href="#">♡ Become a pet-sitter</a>
+<a href="petsitter-registration">♡ Become a pet-sitter</a>
 <a href="#">🐾 Discover our services</a>
-<a href="#">Sign up / Login</a>
+<a href="petsittersignup">Sign up / Login</a>
 <a href="#">Help</a>
 </header>
