--- a/header.html
+++ b/header.html
@@ -16,8 +16,8 @@
 <header class="header-style">
  <a href="homepage.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
 <a href="#">🔍 Search a pet-sitter</a>
-<a href="petsitter-registration">♡ Become a pet-sitter</a>
+<a href="petsitter-registration.html">♡ Become a pet-sitter</a>
 <a href="#">🐾 Discover our services</a>
-<a href="petsittersignup">Sign up / Login</a>
+<a href="petsittersignup.html">Sign up / Login</a>
 <a href="#">Help</a>
 </header>
