--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@
     <input type="text" name="Location" placeholder="Manchester" class="smallerinput-style">
     <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
     <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
-    <a href="filter.html" id="btn-align">+filters</a>
+    <a href="filtering.html" id="btn-align">+filters</a>
   </form>
 </nav>
 
