--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </form>
         </td>
         <td>
-          <a href="search.html" class="btn-green">Submit</a>
+          <a href="search.html" class="btn-green" id="submit-margin">Submit</a>
         </td>
       </tr>
 
