--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
    <meta name="description" content="Key'Pers is an online petsitting platform.">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" type="text/css" href="search.css">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
@@ -54,13 +54,13 @@
 <div class="flex-container">
 
 <div class="cards-layout">
-<section class="card-style">
+<section class="container-style">
   <div class="avatar-margin">
  <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
 </div>
 <div>
     <h2 class="items-margin">Name<span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h3>City and distance from your location </h3>
+    <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
 <div class="price-align">
@@ -70,13 +70,13 @@
 </div>
 </section>
 
-<section class="card-style">
+<section class="container-style">
   <div class="avatar-margin">
     <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
 </div>
 <div>
   <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h3>City and distance from your location </h3>
+    <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
 <div class="price-align">
@@ -86,13 +86,13 @@
 </div>
 </section>
 
-<section class="card-style">
+<section class="container-style">
   <div class="avatar-margin">
     <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
 </div>
 <div>
   <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h3>City and distance from your location </h3>
+    <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
 <div class="price-align">
@@ -102,13 +102,13 @@
 </div>
 </section>
 
-<section class="card-style">
+<section class="container-style">
   <div class="avatar-margin">
   <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
 </div>
 <div>
   <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h3>City and distance from your location </h3>
+    <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
 <div class="price-align">
@@ -142,7 +142,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="#">About us</a>
+  <a href="#" class="footertext-size">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
