--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer-color">
 <div>
   <a href="#" class="footertext-size" >About us</a>
-  <a href="#" class="footertext-size">Terms of use</a>
+  <a href="#">Terms of use</a>
 </div>
 <div>
   <ul class="icon-align">
