--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -34,7 +34,7 @@
 				<table>
 					<tr>
 						<th id="account">Already have an account ?</th>
-						<th id="login">Login now</th>
+						<th><a href="petsitter-dashboard" id="login">Login now</a></th>
 					</tr>
 				</table>
 
