--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -16,10 +16,10 @@
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li>
-					<a href="petsitter-dashboard" class="btn-white1">Continue with Facebook</a>
+					<a href="petsitter-dashboard" class="btn-white">Continue with Facebook</a>
 				</li>
 				<li>
-					<a href="petsitter-dashboard" class="btn-white2">Continue with Google</a>		
+					<a href="petsitter-dashboard" class="btn-white">Continue with Google</a>		
 				</li>
 				<li>
 					<a href="petsitter-dashboard" class="btn-black">Continue with Apple</a>
@@ -28,7 +28,7 @@
 					Or
       				</p>
 				<li>
-					<a href="petsitter-dashboard" class="btn-white3">Sign up with email</a>
+					<a href="petsitter-dashboard" class="btn-white">Sign up with email</a>
 				</li>
 			</ul>
 				<table>
