--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -19,7 +19,7 @@
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-   <a href="#">Sign up / Login</a>
+   <a href="petsittersignup.html">Sign up / Login</a>
    <a href="index.html">Help</a>
 </header>
 
