--- a/profilepage.html
+++ b/profilepage.html
@@ -10,30 +10,14 @@
 </head>
 
 
-<header class="header-color">
-      <table>
-        <tr>
-          <td>
-            <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
-          </td>
-          <td>
-            <a href="#" id="link-margin">🔍 Search a pet-sitter</a>
-          </td>
-          <td>
-            <a href="#" id="link-margin">♡ Become a pet-sitter</a>
-          </td>
-          <td>
-            <a href="#" id="discover-margin">🐾 Discover our services</a>
-          </td>
-           <td>
-            <a href="#" id="discover-margin">Sign up/Login</a>
-          </td>
-          <td>
-            <a href="#" id="help-margin">Help</a>
-          </td>
-        </tr>
-      </table>
-   </header>
+<header class="header-style">
+ <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+<a href="#">🔍 Search a pet-sitter</a>
+<a href="#">♡ Become a pet-sitter</a>
+<a href="#">🐾 Discover our services</a>
+<a href="#">Sign up / Login</a>
+<a href="#">Help</a>
+</header>
 
 
   <nav>
@@ -78,12 +62,12 @@
   </nav>
 
 
-<div class="card-style">
+<div class="card-style" id="card-margin">
     <ul class="list-inline2">
       <table>
           <tr>
             <th id="profile-style"><img src="images/profile.jpg" id="profile" alt="Profile picture"></th>
-            <th id="name-tab"><h2>Name 🐾🐾🐾🐾</h2>
+            <th id="name-tab"><h2 id="h2-margin">Name 🐾🐾🐾🐾</h2>
             </th>
           </tr>
       </table>
@@ -91,7 +75,7 @@
         <p id="city-style">City and distance from your location</p>
 </div>
 
-<div class="card-picture">
+<div class="card-picture" >
         <table>
           <tr>
 
