--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -537,7 +537,7 @@ section:after {
        <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="#">
+      <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
        <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
