--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -137,7 +137,7 @@
        <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="#">
+      <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
        <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
