--- a/profilepage.html
+++ b/profilepage.html
@@ -187,7 +187,7 @@
             <i class="fab fa-facebook"></i>
           </li>
           <li>
-            <a href="#"></a>
+            <a href="https://www.instagram.com/keypers.ieseg/?hl=fr"></a>
             <i class="fab fa-instagram"></i>
           </li>
       </ul>
